Bug 143964 - insert/overwrite cursor shape lags in formula editing
Summary: insert/overwrite cursor shape lags in formula editing
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0 target:7.3.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2021-08-20 02:05 UTC by TorrAB
Modified: 2022-06-05 15:11 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
edit of formula in stages (21.79 KB, application/vnd.oasis.opendocument.graphics)
2021-08-22 13:39 UTC, TorrAB
Details

Note You need to log in before you can comment on or make changes to this bug.
Description TorrAB 2021-08-20 02:05:13 UTC
Open any formula window, eg, in formu2.odt attached to Bug 143891. Hit Ins to set overwrite mode; the cursor does not change shape. Try some editing: mode is indeed overwrite, and the cursor changes accordingly —but it should have done it as soon as overwrite mode was set, lest user wonders if the Ins key works.
Comment 1 Dmitrii A 2021-08-21 02:47:03 UTC
no repro in

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: ac80ec817eb07c77a51bc0729985a473c734182e
CPU threads: 16; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: CL

I think it works how it should, when cursor is in front the simbols it instantly changes. When there are no symbols to replace for example in the end of string it doesn't.
Comment 2 TorrAB 2021-08-22 13:38:01 UTC
(In reply to Dmitrii A from comment #1)
> no repro in
> 
> Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
> Build ID: ac80ec817eb07c77a51bc0729985a473c734182e
> CPU threads: 16; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL:
> win
> Locale: ru-RU (ru_RU); UI: en-US
> Calc: CL
> 
> I think it works how it should, when cursor is in front the simbols it
> instantly changes. When there are no symbols to replace for example in the
> end of string it doesn't.

Not so. See InsOver.odg, attached.
Version: 7.3.0.0.alpha0+ (x86) / LibreOffice Community
Build ID: c820cb429fc3d3eec9bf6596f0a34995cbd93982
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: en-CA (en_US); UI: en-US
Calc: CL
Comment 3 TorrAB 2021-08-22 13:39:30 UTC
Created attachment 174475 [details]
edit of formula in stages
Comment 4 Buovjaga 2022-05-18 14:56:13 UTC
Bibisected with linux-64-7.2 to
https://git.libreoffice.org/core/commit/865641047be4a693f7a51635ce06eab15675126d
tdf#132740 bypass work if selection has not changed
Comment 5 Commit Notification 2022-06-02 12:24:21 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/30703dbe59e909e257876524785836e7f4d993b2

tdf#143964 insert/overwrite cursor shape lags in formula editing

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2022-06-05 15:11:36 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/dd5113883ae49def80e34f1d6ee4190ace9c52c9

tdf#143964 insert/overwrite cursor shape lags in formula editing

It will be available in 7.3.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.