tdf#143964 insert/overwrite cursor shape lags in formula editing

Revert "tdf#132740 bypass work if selection has not changed"

This reverts commit 865641047be4a693f7a51635ce06eab15675126d.

Change-Id: I69244a1e57ce979bf21946e31df7165f8791423c